# adversarial-robustness-toolbox

./: .coveragerc  .dockerIgnore  .gitattributes  .gitignore  .lgtm.yml  .pylintrc  .travis.yml  ART_1_18_MarketBack_adversarial_machine_learning.ipynb  ART_Target_Label_Flipping_Attack_Using_Dirty_Label_Inversion.ipynb  AUTHORS  Backdoor_attack_using_audio_stylistic_transformations_in_deep_neural_network_model_learning.ipynb  CODE_OF_CONDUCT.md  CONTRIBUTING-cn.md  CONTRIBUTING.md  Copie_de_Update_ART_1_18_Bayesian_diffusion_models_backdoor_Backdoor_attack_HuggingFace_Model_Automatic_Speech_Recognition.ipynb  Dockerfile  Dockerfile_DeepSpeech  Dockerfile_deepspeech_v2  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  MarketBackFinal 2.0  PULL_REQUEST_TEMPLATE.md  Pytorch_Model_art.pkl  Pytorch_Model_art.pth  Pytorch_Model_table1-m-0.5.pth  README-cn.md  README-work-for-me.md  README.md  SECURITY.md  Yang-Mills Update_ART_1_18_Bayesian_diffusion_models_backdoor_Backdoor_attack_HuggingFace_Model_Automatic_Speech_Recognition.ipynb  action_deepspeech_v2.yml  adversarial_robustness_toolbox_Backdoor_attack_HuggingFace_Model_Automatic_Speech_Recognition.ipynb  art_adv_1.npy  art_adv_5.npy  attack_on_mnist.py  binary_art.py  clip_dev.py  clip_initial_attack.py  (+50 more)
.github/: dependabot.yml
art/: BackStockPros  __init__.py  config.py  data_generators.py  data_generators_unittest.py  exceptions.py  metrics.py  metrics_trees.py  metrics_unittest.py  optimizers.py  performance_monitor.py  summary_writer.py  tensor_board.py  utils.py  utils_test.py  utils_unittest.py  visualization.py  visualization_unittest.py
config/: __init__.py  config.ini
contrib/: lingvo-patched-decoder.py
demo/: draw_boundaries.py  utils.py
docs/: Makefile  conf.py  index.rst  make.bat
examples/: README.md  adversarial_training_FBF.py  adversarial_training_awp.py  adversarial_training_cifar10.py  adversarial_training_data_augmentation.py  adversarial_training_oaat.py  adversarial_training_trades.py  application_object_detection.py  backdoor_attack_dgm_ReD.py  backdoor_attack_dgm_red.py  backdoor_attack_dgm_trail.py  backdoor_attack_dgm_trail_cifar.py  cacl_norm.py  chloe-pytorch.py  cifar10_cnn_simba.py  cifar10_cnn_universal_simba.py  cifar_adversarial_training.py  cifar_feature_squeezing.py  data_augmentation.py  (+29 more)
(+1801 files in other folders)
