[metadata]
description-file = README.md

[tool:pytest]
pep8maxlinelength = 120
pep8ignore = *.py E402 W503 E203 E231 E251 E701

[mypy]
ignore_missing_imports = True

[pytest]
markers =
    skipMlFramework: marks a test to be skipped for specific mlFramework values. Valid values are ("tensorflow" "keras" "pytorch" "scikitlearn")
    only_with_platform: DEPRECATED only used for legacy tests. Use skipMlFramework instead. marks a test to be performed only for a specific mlFramework values
    framework_agnostic: marks a test to be agnostic to frameworks and run only for one default framework

