[metadata]
description-file = README.md

[tool:pytest]
flake8-max-line-length = 120
flake8-ignore =
    *.py E402 W503 E203 E231 E251 E701
    # imported but unused
    */__init__.py F401
    */preprocessing.py F401
markers =
    skip_framework: marks a test to be skipped for specific framework values. Valid values are ("tensorflow" "keras" "mxnet" "pytorch" "scikitlearn")
    only_with_platform: DEPRECATED only used for legacy tests. Use skip_framework instead. marks a test to be performed only for a specific framework value
    framework_agnostic: marks a test to be agnostic to frameworks and run only for one default framework
    skip_travis: Skips a test marked with this decorator if the command line argument skip_travis is set to true
    skip_module: Skip the test if a module is not available in the current environment

[mypy]
ignore_missing_imports = True
